# OFIQ-Project

./: .clang-format  .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md  Version.txt  environment.yml
.github/workflows/: pre-commit.yaml
FaceQAlib/: CMakeLists.ubuntu.conan.cmake  CMakeLists.windows.conan.cmake
FaceQAlib/include/: faceqa_lib.h  faceqa_lib_impl.h  faceqa_structs.h
FaceQAlib/modules/detectors/: AllDetectors.h  Rectangle.h  detectors.h  opencv_ssd_face_detector.h
FaceQAlib/modules/detectors/src/: detectors.cpp  opencv_ssd_face_detector.cpp
FaceQAlib/modules/landmarks/: AllLandmarks.h  FaceMeasures.h  FaceParts.h  PartExtractor.h  adnet_FaceMap.h  adnet_landmarks.h  landmarks.h
FaceQAlib/modules/landmarks/src/: FaceMeasures.cpp  PartExtractor.cpp  adnet_landmarks.cpp  landmarks.cpp
FaceQAlib/modules/measures/: AllMeasures.h  DynamicRange.h  Executor.h  Measure.h  MouthOpen.h  TotalFacesPresent.h
FaceQAlib/modules/measures/src/: DynamicRange.cpp  Executor.cpp  Measure.cpp  MouthOpen.cpp  TotalFacesPresent.cpp
FaceQAlib/modules/utils/: Configuration.h  FaceQaError.h  NeuronalNetworkContainer.h  Session.h  image_io.h  utils.h
FaceQAlib/modules/utils/src/: Configuration.cpp  FaceQaError.cpp  Session.cpp  image_io.cpp  utils.cpp
FaceQAlib/src/: FaceQAImpl.cpp  FaceQAImplInjectors.cpp  faceqalib_sample_prog.cpp
OFIQlib/: CMakeLists.macos.cmake  CMakeLists.macos.conan.cmake  CMakeLists.ubuntu.cmake  CMakeLists.ubuntu.conan.cmake  CMakeLists.ubuntu_arm64.cmake  CMakeLists.windows.cmake
OFIQlib/include/: ofiq_lib.h  ofiq_lib_impl.h  ofiq_structs.h
OFIQlib/modules/detectors/: AllDetectors.h  detectors.h  opencv_ssd_face_detector.h
OFIQlib/modules/detectors/src/: detectors.cpp  opencv_ssd_face_detector.cpp
OFIQlib/modules/landmarks/: AllLandmarks.h  FaceMeasures.h  FaceParts.h  PartExtractor.h  adnet_FaceMap.h  adnet_landmarks.h  landmarks.h
OFIQlib/modules/landmarks/src/: FaceMeasures.cpp  PartExtractor.cpp  adnet_landmarks.cpp  landmarks.cpp
OFIQlib/modules/measures/: AllMeasures.h  BackgroundUniformity.h  CompressionArtifacts.h  CropOfTheFaceImage.h  DynamicRange.h  Executor.h  ExpressionNeutrality.h  EyesOpen.h  EyesVisible.h  FaceOcclusionPrevention.h  HeadPose.h  HeadSize.h  IlluminationUniformity.h  InterEyeDistance.h  Luminance.h  Measure.h  MeasureFactory.h  MouthClosed.h  MouthOcclusionPrevention.h  NaturalColour.h  NoHeadCoverings.h  OverExposurePrevention.h  Sharpness.h  SingleFacePresent.h  UnderExposurePrevention.h  UnifiedQualityScore.h
OFIQlib/modules/measures/src/: BackgroundUniformity.cpp  CompressionArtifacts.cpp  CropOfTheFaceImage.cpp  (+22 more)
OFIQlib/modules/poseEstimators/: AllPoseEstimators.h  HeadPose3DDFAV2.h  poseEstimators.h
OFIQlib/modules/segmentations/: FaceOcclusionSegmentation.h  FaceParsing.h  ONNXRTSegmentation.h  segmentations.h
OFIQlib/modules/utils/: Configuration.h  NeuronalNetworkContainer.h  OFIQError.h  Session.h  data_source.h  image_io.h  image_utils.h  utils.h
OFIQlib/src/: OFIQImpl.cpp  OFIQInitialization.cpp  OFIQSampleApp.cpp
cmake/: CPackConfig.cmake  DownloadDependencies.cmake  DownloadExternalSourceCode.cmake  SourceDefinition.cmake
conan/: conan_profile.txt  conan_profile_debug.txt  conan_profile_debug_linux.txt  conan_profile_debug_linux_arm64.txt  conan_profile_debug_mac.txt  conan_profile_debug_macos.txt  conan_profile_release.txt  conan_profile_release_linux.txt  conan_profile_release_linux_arm64.txt  conan_profile_release_mac.txt  conan_profile_release_macos.txt  conanfile.txt
data/: faceqa.jaxn  ofiq_config.jaxn
data/models/: README.md
data/models/adnet/: README.md
data/models/ssd_facedetect/: README.md
data/tests/expected_results/: expected_results.csv
data/tests/images/: README.md
doc/: GETTINGSTARTED.md
doc/src/: mainpage.h  ofiq-doxygen.cfg
doc/testsets/: Compression_ground_truth_Flickr-Rotated_jp2.csv  Compression_ground_truth_Flickr-Rotated_jpg.csv  Compression_ground_truth_Flickr-Upright_jp2.csv  Compression_ground_truth_Flickr-Upright_jpg.csv  ExpressionNeutrality_ground_truth_DISFA+.csv  ExpressionNeutrality_ground_truth_MUG+FERET_V2.csv  EyesOpen_ground_truth_ARFace.csv  EyesOpen_ground_truth_CAS-PEAL-R1.csv  EyesVisble_ground_truth_SejongFaceDB.csv  EyesVisible_ground_truth_COFW.csv  FaceOcclusionPrevention_ground_truth_COFW.csv  HeadPose_ground_truth_AFLW2000v2.csv  HeadPose_ground_truth_CMU_Multi_PIE.csv  HeadPose_ground_truth_Poinint04.csv  MouthClosed_ground_truth_CAS-PEAL-R1.csv  MouthClosed_ground_truth_Chicago_Face_Database.csv  MouthClosed_ground_truth_Eurecom_Kinect_Face.csv  MouthOcclusionPrevention_Labels_SejongFaceDB.csv  MouthOcclusionPrevention_ground_truth_COFW.csv  NaturalColour_ground_truth_ARFace.csv  NaturalColour_ground_truth_FERET_ColorCast.csv  NaturalColour_ground_truth_FERET_Saturation.csv  NoHeadCovering_ground_truth_CAS-PEAL-R1.csv  NoHeadCovering_ground_truth_CelebAMask-HQ_V2.csv  OverExposure_ground_truth_ARFace.csv  OverExposure_ground_truth_CAS-PEAL-R1.csv  README.md  Sharpness_ground_truth_FRGC.csv  UnderExposure_ground_truth_CAS-PEAL-R1.csv  UniformBackground_ground_truth_FRGC.csv  UniformIllumination_ground_truth_ARFace.csv  UniformIllumination_ground_truth_CMU_Multi-PIE.csv
scripts/: 01_conan-install-FaceQAlib.cmd  01_conan-install-FaceQAlib.sh  02_configure_and_build_FaceQAlib.cmd  02_configure_and_build_FaceQAlib.sh  03_build_FaceQAlib.cmd  03_build_FaceQAlib.sh  22_configure_and_build_FaceQAlib_frvt.sh  build.cmd  build.sh  build_debug.cmd  build_debug.sh  build_mac.sh  build_mac_debug.sh  conformance_tests.cmd  conformance_tests.sh  conformance_tests_debug.cmd  conformance_tests_mac.sh  run_ctest.cmd  run_ctest.sh  run_sample.cmd  run_sample.sh
testing/: CMakeLists.txt  test_config_and_initialization.cpp  test_conformance_table.cpp  test_constants.h  test_dynamic_range.cpp  test_facedetector.cpp  test_landmarkdetector.cpp  test_mouth_open.cpp  test_total_number_of_faces.cpp
testing/configfiles/: faceqa_adnet.jaxn  faceqa_measures.jaxn  faceqa_ssd_face.jaxn
(+13 files in other folders)
